--- a/css/style.css
+++ b/css/style.css
@@ -81,8 +81,7 @@ body {
     border: none;
     margin-left: auto !important;
     margin-right: auto !important;
-    margin-top: 40px;
-    margin-bottom: 40px;
+    margin: 0%;
     position: relative;
     opacity: 1;
 }
