--- a/css/footer.css
+++ b/css/footer.css
@@ -1,67 +1,60 @@
-/*footer*/
+
 footer {
     font-family: 'Inter', sans-serif;
     font-weight: 600;
     max-width: 1400px;
-    margin: 10px;
+    margin: 20px; 
     display: flex;
     flex-direction: column;
 }
 
 .footer-content {
-    margin: 50px;
+    margin: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start; 
+    text-align: left;        
 }
 
+
 .footer-info {
-    margin: 10px;
+    display: flex;
+    flex-direction: column;
 }
 
 .footer-p {
-    margin: 10px;
+    margin-top: 15px; 
+}
 
+.footer-icons {
+    display: flex;
+    align-items: center;
 }
 
 .footer-icons img {
-    width: 40px;
-    margin-left: 15px;
+    width: 60px;
+    margin-right: 15px; 
 }
 
-.line {
-    border: none;
-    height: 6px;
-    background-color: #000;
-    width: calc(100% - 100px);
-    margin: 10px auto 20px auto;
-    opacity: 1;
-}
 
 @media (min-width: 768px) {
     .footer-content {
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        text-align: left;
+        flex-direction: row;           
+        justify-content: space-between; 
+        align-items: center;            
     }
 
     .footer-info {
-        display: flex;
-        gap: 20px;
-        flex-wrap: wrap;
-    }
-}
-
-@media (min-width: 992px) {
-
-    .footer-content {
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        text-align: left;
+        flex-direction: row;          
+        gap: 30px;
     }
 
-    .footer-info {
-        display: flex;
-        gap: 20px;
-        flex-wrap: wrap;
+    .footer-icons {
+        justify-content: flex-end;     
+    }
+
+    .footer-icons img {
+        margin-left: 15px;      
+        margin-right: 0;
     }
 }
